LOAD-39401 & LOAD-39411: [As-Code] Make delay polymorphic: Delay / DelayConstant / DelayRandom [As-Code] Make think_time polymorphic: ThinkTime / ThinkTimeConstant / ThinkTimeRandom