@@ -1,9 +1,9 @@
 package com.neotys.neoload.model.readers.jmeter.step.timer;
 
-import com.google.common.collect.ImmutableList;
 import com.neotys.neoload.model.readers.jmeter.ContainerUtils;
 import com.neotys.neoload.model.readers.jmeter.EventListenerUtils;
 import com.neotys.neoload.model.v3.project.userpath.Delay;
+import com.neotys.neoload.model.v3.project.userpath.DelayConstant;
 import com.neotys.neoload.model.v3.project.userpath.Step;
 import org.apache.jmeter.testelement.property.JMeterProperty;
 import org.apache.jmeter.testelement.property.PropertyIterator;
@@ -26,14 +26,14 @@ public class UniformerRandomTimerConverter implements BiFunction<UniformRandomTi
     //Methods
     @Override
     public List<Step> apply(final UniformRandomTimer uniformRandomTimer, final HashTree hashTree) {
-        final Delay delay = Delay.builder()
+        final Delay delay = DelayConstant.builder()
                 .name(uniformRandomTimer.getName())
                 .description(uniformRandomTimer.getComment())
                 .value(checkDelay(uniformRandomTimer))
                 .build();
         LOGGER.info("Uniform Random Timer Correctly converted");
         EventListenerUtils.readSupportedFunction("UniformRandomTimer","Uniform Random Timer");
-        return ImmutableList.of(delay);
+        return List.of(delay);
     }
 
     /**
